--- a/templates/layout/city_menu.html.twig
+++ b/templates/layout/city_menu.html.twig
@@ -1,48 +1,50 @@
-{# css #}
-{# <link rel="stylesheet" href="{{ asset('css/header.css') }}"> #}
-
-<!-- Barre de navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<div class="container-fluid">
-		{# <a class="navbar-brand" href="#">Ma Boutique</a> #}
+    <div class="container-fluid">
 
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="{{ 'navbar.toggle_navigation'|trans }}">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+        <button class="navbar-toggler" type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="{{ 'nav.toggle'|trans }}">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-				<!-- Dropdown des villes -->
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="citiesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-						{{ 'navbar.cities'|trans }}
-					</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="citiesDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        {{ 'nav.cities_shops'|trans({}, 'messages') ?: 'Cidades : lojas' }}
+                    </a>
 
-					<ul class="dropdown-menu" aria-labelledby="citiesDropdown">
-						{% for city in cities %}
-							<li class="dropdown-submenu">
-								<a class="dropdown-item dropdown-toggle" href="#">
-									<strong>{{ city.name }}</strong>
-								</a>
-								<ul class="dropdown-menu">
-									{% for shop in city.shops %}
-										{% if shop.active == true %}
-											<li>
-												<a class="dropdown-item" href="{{ path('shop_products', {id: shop.id}) }}">
-													{{ shop.name }}
-												</a>
-											</li>
-										{% endif %}	
-									{% endfor %}
-								</ul>
-							</li>
+                    <ul class="dropdown-menu" aria-labelledby="citiesDropdown">
+                        {% for city in cities %}
+                            <li class="dropdown-submenu">
+                                <a class="dropdown-item dropdown-toggle" href="#">
+                                    <strong>{{ city.name }}</strong>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    {% for shop in city.shops %}
+                                        {% if shop.active %}
+                                            <li>
+                                                <a class="dropdown-item"
+                                                   href="{{ path('shop_products', { id: shop.id }) }}">
+                                                    {{ shop.name }}
+                                                </a>
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+                                </ul>
+                            </li>
+                        {% else %}
+                            <li><span class="dropdown-item text-muted">Aucune ville disponible</span></li>
+                        {% endfor %}
+                    </ul>
+                </li>
 
-						{% endfor %}
-					</ul>
-				</li>
-
-			</ul>
-		</div>
-	</div>
+            </ul>
+        </div>
+    </div>
 </nav>
