--- a/templates/user/_delete_form.html.twig
+++ b/templates/user/_delete_form.html.twig
@@ -1,6 +1,5 @@
-<form method="post"
-      action="{{ path('app_user_delete', {'id': user.id}) }}"
-      onsubmit="return confirm('{{ 'profile.delete_confirm'|trans }}');">
+<form method="post" action="{{ path('app_user_delete', {'id': user.id}) }}"
+      onsubmit="return confirm('{{ 'user.delete.confirm'|trans }}');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-    <button class="btn">{{ 'profile.delete_button'|trans }}</button>
+    <button class="btn">{{ 'user.delete.button'|trans }}</button>
 </form>
